2000-01-21  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* config/acinclude.m4i (CF_WAIT): Simplify the test.  Declare wait()
	in the global scope.

2000-01-21  Garrett Wollman  <wollman@khavrinen.lcs.mit.edu>

	* config/acinclude.m4i (CF_WAIT): Avoid warnings on systems
	where `union wait' works but is deprecated.

2000-01-21  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* recover-src/uscan.l (settape): Recognize it.
	* recover-src/uparse.y: Parse it.
	* recover-src/amrecover.h (set_tape): Declare it.
	* recover-src/set_commands.c (set_tape): Implement it.
	* recover-src/help.c (help_list): Document it.
	* man/amrecover.8.in: Likewise.
	* recover-src/extract_list.c (extract_files): Warn if tape device is
	/dev/null.
	* recover-src/amrecover.c (tape_device_name): Default to
	server-determined default.

2000-01-17  Thomas Hepper <th@ant.han.de>
	* changer-src/scsi-changer-driver.c : Typo in CheckMove fixed .

2000-01-17  Thomas Hepper <th@ant.han.de>

	* configure.in: check for scsi/sg.h on linux, and if true
	enable sg support

	* changer-src/chg-scsi.c : New option -trace for debuging...
	new option changer_ident to set the internal driver for the changer

	* hanger-src/scsi-hpux_new.c: New function Tape_Status.
	returns the status of the tape. (loaded/empty etc)
	* changer-src/scsi-aix.c : Dummy function for Tape_Status
	* changer-src/scsi-bsd.c : Dummy function for Tape_Status
	* changer-src/scsi-irix.c : Dummy function for Tape_Status
	* changer-src/scsi-solaris.c : Dummy function for Tape_Status
	* changer-src/scsi-linux.c : Added better support for the sg driver.
	* changer-src/scsi-changer-driver.c : New driver for ADIC SDX and DLT448
	librarys
	new function SDXMove for SDX library
	new function CheckMove to check if a move is legal based on the infs
	we get from the Mode Sense command
	* changer-src/scsi-defs.h : Added types returned by Tape_Status

2000-01-16  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
